--- a/website-asignment/style.css
+++ b/website-asignment/style.css
@@ -41,6 +41,9 @@ body {
 
 .para-1 {
   grid-area: para-1;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(./images/pexels-photo-4511372.jpeg) center/cover no-repeat fixed;
+  color: var(--lightGrey);
 }
 .para-2 {
   grid-area: para-2;
@@ -55,12 +58,18 @@ body {
 
 /* HEADER */
 .index-header {
+  /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(./images/head.jpeg) center/cover no-repeat fixed; */
   grid-area: header;
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-height: 170px;
   background-color: #f5f5f5;
+  position: sticky;
+  top: 0;
+  z-index: 9000;
+  width: 100%;
 }
 /* NAVBAR */
 /* NAVBUTTON */
@@ -95,7 +104,7 @@ body {
 .fa-columns,
 .fa-question-circle,
 .fa-id-badge {
-  font-size: 20px;
+  font-size: 28px;
   margin-right: 2px;
 }
 
@@ -119,15 +128,15 @@ body {
 }
 li,
 a {
-  font-size: 20px;
+  font-size: 28px;
   text-decoration: none;
   color: var(--mainBlue);
 }
 
 .profile-pic,
 .hz-logo {
-  max-width: 100%;
-  max-height: 100%;
+  /* max-width: 100%;
+  max-height: 100%; */
   border-radius: 70px;
   padding: 10px;
   transition: 0.5s ease;
@@ -137,9 +146,12 @@ a {
   height: 150px;
   cursor: pointer;
   margin-top: 10px;
+  /* box-shadow: -15px -6px 13px -3px #191500; */
 }
 .profile-pic {
   margin-left: 120px;
+  max-width: 120px;
+  float: left;
 }
 /* END OF NAVBAR */
 /* END OF HEADER */
@@ -149,18 +161,18 @@ a {
   height: 100%;
   width: 0%;
   position: fixed;
-  z-index: 1;
+  z-index: 9001;
   top: 0;
   left: 0;
-  background: var(--mainBlue);
-  /* opacity: 0.9; */
+  background: #1e90ff;
+  /* opacity: 0.99; */
   overflow-x: hidden;
   padding-top: 60px;
   transition: 0.7s ease;
 }
 .slidebar a {
   display: block;
-  padding: 20px 30px;
+  padding: 30px 30px;
   font-size: 25px;
   text-decoration: none;
 }
@@ -170,7 +182,7 @@ a {
 }
 .slidebar .close {
   position: absolute;
-  top: 0;
+  top: -17px;
   right: 22px;
 }
 .fa-times {
@@ -199,6 +211,7 @@ a {
 .footer {
   padding: 40px 0;
   border-top: 0.5rem solid var(--mainBlue);
+  /* background-color: var(--darkGrey); */
 }
 .footer-icons {
   display: flex;
