--- a/website-asignment/style.css
+++ b/website-asignment/style.css
@@ -11,7 +11,7 @@ body {
   background-color: #f5f5f5;
   font-family: "Fira Sans", sans-serif;
   /* The overflow-x property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the left and right edges. */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /* these are variables  */
@@ -21,6 +21,9 @@ body {
   --lightGrey: #c9c9c9;
   --darkGrey: #959595;
   --dark: #191919;
+  --mainWhite: #e0e2db;
+  --mainYellow: #e6af2e;
+  --mainGrey: #beb7a4;
 }
 
 /* GRID */
@@ -35,18 +38,19 @@ body {
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
 }
-.item {
+/* .item {
   border: 2px solid orange;
-}
+} */
 
 .para-1 {
   grid-area: para-1;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(./images/pexels-photo-4511372.jpeg) center/cover no-repeat fixed;
-  color: var(--lightGrey);
+  color: var(--lightGrey); */
 }
 .para-2 {
   grid-area: para-2;
+  height: 100%;
 }
 .sidebar {
   grid-area: sidebar;
@@ -56,32 +60,25 @@ body {
 }
 /* END OF GRID */
 
-/* HEADER */
+/* NAVBAR */
 .index-header {
   /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url(./images/head.jpeg) center/cover no-repeat fixed; */
   grid-area: header;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-height: 170px;
   background-color: #f5f5f5;
   position: sticky;
   top: 0;
   z-index: 9000;
   width: 100%;
 }
-/* NAVBAR */
 /* NAVBUTTON */
 .nav-btn {
   color: var(--mainBlue);
-  /* it doesn't move when you scroll */
-  position: fixed;
   cursor: pointer;
+  margin: 0 40px;
 }
 .fa-bars {
   font-size: 50px;
-  margin-left: 40px;
   animation: breathe 2s ease-in-out infinite;
 }
 /* animation */
@@ -106,56 +103,110 @@ body {
 .fa-question-circle,
 .fa-id-badge {
   font-size: 28px;
-  margin-right: 2px;
+  margin-right: 5px;
 }
 
 .nav-links {
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--dark);
 }
 .active {
-  border: 3px solid var(--dark);
+  border: 3px solid var(--mainWhite);
   border-radius: 3rem;
 }
-.nav-links li {
-  display: inline-block;
+.list-item {
   padding: 20px 20px;
+  text-align: center;
   cursor: pointer;
   transition: all 0.2s ease-in;
 }
-.nav-links li:hover {
-  background: var(--dark);
+.list-item:hover {
+  background: var(--mainWhite);
   border-radius: 3rem;
   box-shadow: 0 10px 5px #191500;
 }
+
 li,
 a {
   font-size: 28px;
-  text-decoration: none;
+  margin: 0 2px;
   color: var(--mainBlue);
+  text-decoration: none;
+  display: flex;
 }
 
 .profile-pic,
 .hz-logo {
-  /* max-width: 100%;
-  max-height: 100%; */
   border-radius: 70px;
-  padding: 10px;
-  transition: 0.5s ease;
+  margin: 10px 0;
 }
 
 .hz-logo {
   height: 150px;
   cursor: pointer;
-  margin-top: 10px;
   /* box-shadow: -15px -6px 13px -3px #191500; */
 }
 .profile-pic {
-  margin-left: 120px;
-  max-width: 120px;
-  float: left;
+  max-width: 110px;
+  margin-right: 10px;
 }
+@media screen and (max-width: 576px) {
+  .index-header {
+    position: initial;
+  }
+  nav ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  li,
+  a {
+    font-size: 30px;
+  }
+
+  .fa-home,
+  .fa-blog,
+  .fa-columns,
+  .fa-question-circle,
+  .fa-id-badge {
+    font-size: 30px;
+  }
+
+  nav ul li {
+    flex: 1 0 calc(50%);
+    margin: 5px 10px;
+  }
+
+  .nav-btn {
+    /* display: inline; */
+    margin-top: 25px;
+    margin-left: 10;
+    margin-bottom: 40px;
+  }
+
+  .fa-bars {
+    font-size: 60px;
+  }
+
+  .hz-logo {
+    display: none;
+  }
+
+  .profile-pic {
+    display: none;
+  }
+}
+
+/* @media screen and (max-width: 476px) {
+  nav ul li {
+    flex: 1 0 calc(50%);
+    margin: 5px 10px;
+  }
+} */
 /* END OF NAVBAR */
-/* END OF HEADER */
 
 /* SIDEBAR */
 .slidebar {
@@ -208,11 +259,106 @@ a {
 }
 /* END OF SIDEBAR */
 
+/* BANNER/PARA-1 */
+#banner {
+  min-height: 80vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./images/background-banner.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.banner-text {
+  font-size: 50px;
+  text-transform: uppercase;
+  color: var(--mainWhite);
+  font-style: italic;
+}
+.banner-underline {
+  width: 200px;
+  border: 3px solid var(--mainBlue);
+  /* places it in the center */
+  margin: 10px auto 10px auto;
+}
+
+.banner-btn {
+  display: flex;
+  justify-content: space-between;
+}
+.banner-btn button a {
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: 900;
+}
+.banner-btn button {
+  margin: 0 10px;
+  background: transparent;
+  border: 4px solid var(--mainBlue);
+}
+.banner-btn button a:hover {
+  color: var(--mainWhite);
+}
+/* END OF BANNER */
+
+/* PARA-2 */
+#skills {
+  padding: 60px 0;
+  background-color: var(--mainGrey);
+}
+.skills-container {
+  max-width: 95vw;
+  /* places it in the center */
+  margin: 0 auto;
+}
+.skills-item {
+  text-align: center;
+  margin: 20px 0;
+}
+.skills-item .fa {
+  font-size: 60px;
+  color: var(--mainBlack);
+}
+.skills-item h1 {
+  font-size: 30px;
+  letter-spacing: 2px;
+  margin: 30px 0;
+  color: var(--mainBlue);
+  text-transform: uppercase;
+}
+
+.skills-item p {
+  width: 75%;
+  margin: 0 auto;
+  color: var(--mainWhite);
+}
+
+@media screen and (min-width: 576px) {
+  .skills-container {
+    display: grid;
+    /* divides in 2 */
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 1em;
+  }
+}
+/* @media screen and (min-width: 992px) {
+  .skills-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 5px;
+  }
+} */
+/* END OF PARA-2 */
+
 /* FOOTER */
 .footer {
   padding: 40px 0;
   border-top: 0.5rem solid var(--mainBlue);
-  /* background-color: var(--darkGrey); */
+  background-color: var(--dark);
 }
 .footer-icons {
   display: flex;
@@ -227,7 +373,7 @@ a {
   font-size: 40px;
 }
 .footer-single-icon:hover {
-  color: var(--dark);
+  color: var(--mainWhite);
   /* moves it up */
   transform: translateY(-1rem);
 }
