--- a/website-asignment/style.css
+++ b/website-asignment/style.css
@@ -292,6 +292,8 @@ a {
 .banner-btn button a {
   padding: 15px;
   text-transform: uppercase;
+  text-align: justify;
+  text-justify: inter-word;
   font-size: 30px;
   font-weight: 900;
 }
@@ -332,7 +334,7 @@ a {
 }
 
 .skills-item p {
-  width: 75%;
+  width: 90%;
   margin: 0 auto;
   color: var(--mainWhite);
 }
