--- a/website-asignment/styles/faq..css
+++ b/website-asignment/styles/faq..css
@@ -12,6 +12,7 @@ body {
   font-family: "Fira Sans", sans-serif;
   /* The overflow-x property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the left and right edges. */
   /* overflow-x: hidden; */
+  height: 100%;
 }
 
 /* these are variables  */
@@ -28,35 +29,39 @@ body {
 
 /* GRID */
 .container {
-  height: 200vh;
+  /* height: 200vh; */
   display: grid;
   grid-template-areas:
     "sidebar header header"
     "sidebar para-1 para-1"
-    "sidebar para-2 para-2"
+    "sidebar para-1 para-1"
     "sidebar footer footer";
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
+  position: relative;
 }
-/* .item {
+.item {
   border: 2px solid orange;
-} */
+}
 
 .para-1 {
   grid-area: para-1;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./images/pexels-photo-4511372.jpeg) center/cover no-repeat fixed;
-  color: var(--lightGrey); */
-}
-.para-2 {
-  grid-area: para-2;
-  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/background-banner.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: fit-content;
 }
 .sidebar {
   grid-area: sidebar;
 }
 .footer {
   grid-area: footer;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 /* END OF GRID */
 
@@ -259,102 +264,75 @@ a {
 }
 /* END OF SIDEBAR */
 
-/* BANNER/PARA-1 */
-#banner {
-  min-height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/background-banner.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+/* PARA-1 */
+#faq-container {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 200px;
+}
+#faq-container h2 {
+  color: var(--mainBlue);
+  position: relative;
+  width: 100%;
+  font-size: 70px;
+  margin-bottom: 50px;
+}
+#faq-container h2::after {
+  content: " ";
+  position: absolute;
+  bottom: 0;
+  right: 40px;
+  width: 250px;
+  height: 5px;
+  margin-top: 60px;
+  background-color: var(--mainBlue);
+}
+.accordion {
+  width: 100%;
+  padding: 10px;
+  border: 3px solid var(--mainBlue);
+  cursor: pointer;
+  border-radius: 50px;
+  margin: 10px 0;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
-.banner-text {
-  font-size: 50px;
-  text-transform: uppercase;
-  color: var(--mainWhite);
-  font-style: italic;
-}
-.banner-underline {
-  width: 200px;
-  border: 3px solid var(--mainBlue);
-  /* places it in the center */
-  margin: 10px auto 10px auto;
-}
-
-.banner-btn {
-  display: flex;
-  justify-content: space-between;
-}
-.banner-btn button a {
-  padding: 15px;
-  text-transform: uppercase;
-  text-align: justify;
-  text-justify: inter-word;
-  font-size: 30px;
-  font-weight: 900;
-}
-.banner-btn button {
+.accordion .icon {
   margin: 0 10px;
-  background: transparent;
-  border: 4px solid var(--mainBlue);
+  width: 30px;
 }
-.banner-btn button a:hover {
-  color: var(--mainWhite);
-}
-/* END OF BANNER */
-
-/* PARA-2 */
-#skills {
-  padding: 60px 0;
-  background-color: var(--mainGrey);
-}
-.skills-container {
-  max-width: 95vw;
-  /* places it in the center */
-  margin: 0 auto;
-}
-.skills-item {
-  text-align: center;
-  margin: 20px 0;
-}
-.skills-item .fa {
-  font-size: 60px;
-  color: var(--mainBlack);
-}
-.skills-item h1 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  margin: 30px 0;
+.accordion .icon i {
+  font-size: 25px;
   color: var(--mainBlue);
-  text-transform: uppercase;
+  transition: all 0.5 ease;
 }
-
-.skills-item p {
-  width: 90%;
-  margin: 0 auto;
+.accordion h5 {
+  font-size: 25px;
+  padding: 3px;
+  color: var(--mainWhite);
+  text-transform: capitalize;
+}
+.panel {
+  padding: 0 15px;
+  border-left: 4px solid var(--mainBlue);
+  margin-left: 25px;
+  font-size: 14px;
+  text-align: justify;
+  overflow: hidden;
+  max-height: 0;
+  transition: all 0.5s ease-in-out;
+}
+.panel p {
   color: var(--mainWhite);
 }
-
-@media screen and (min-width: 576px) {
-  .skills-container {
-    display: grid;
-    /* divides in 2 */
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 1em;
-  }
+.active-faq {
+  background-color: var(--mainBlue);
 }
-/* @media screen and (min-width: 992px) {
-  .skills-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 5px;
-  }
-} */
-/* END OF PARA-2 */
+.active-faq .icon .fas {
+  color: var(--dark);
+}
+/* END OF PARA-1 */
 
 /* FOOTER */
 .footer {
