--- a/website-asignment/styles/profle.css
+++ b/website-asignment/styles/profle.css
@@ -12,6 +12,7 @@ body {
   font-family: "Fira Sans", sans-serif;
   /* The overflow-x property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the left and right edges. */
   /* overflow-x: hidden; */
+  min-height: 100%;
 }
 
 /* these are variables  */
@@ -38,9 +39,9 @@ body {
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
 }
-/* .item {
+.item {
   border: 2px solid orange;
-} */
+}
 
 .para-1 {
   grid-area: para-1;
@@ -260,7 +261,8 @@ a {
 /* END OF SIDEBAR */
 
 /* BANNER/PARA-1 */
-#banner {
+.about {
+  /* margin-top: 150px; */
   min-height: 80vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/background-banner.jpg);
@@ -272,88 +274,178 @@ a {
   align-items: center;
   justify-content: center;
 }
-.banner-text {
-  font-size: 50px;
-  text-transform: uppercase;
-  color: var(--mainWhite);
-  font-style: italic;
+
+.about {
+  padding: 10px 60px;
 }
-.banner-underline {
-  width: 200px;
-  border: 3px solid var(--mainBlue);
-  /* places it in the center */
-  margin: 10px auto 10px auto;
+.about__center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 90vw;
+  margin: 2rem auto;
+}
+.about-img {
+  margin: 25px 0;
+  /* position:relative bc of "before" */
+  position: relative;
+}
+.about-img__photo {
+  min-width: 60%;
+  display: block;
+  width: 80%;
+  position: relative;
+  border-radius: 50%;
+  box-shadow: -19px 11px 0px -2px var(--mainBlue);
 }
 
-.banner-btn {
-  display: flex;
-  justify-content: space-between;
+.about-info {
+  margin: 3rem 0;
 }
-.banner-btn button a {
-  padding: 15px;
-  text-transform: uppercase;
-  text-align: justify;
-  text-justify: inter-word;
-  font-size: 30px;
-  font-weight: 900;
+.about-info__title {
+  font-size: 3rem;
+  letter-spacing: 0.3rem;
+  /* background: url(./img/title-bcg.svg); */
+  font-weight: bolder;
+  text-align: center;
+  /* border: 4px solid var(--mainBlue); */
+  color: var(--mainWhite);
+  border-radius: 15px;
 }
-.banner-btn button {
-  margin: 0 10px;
-  background: transparent;
-  border: 4px solid var(--mainBlue);
+.about-info__small {
+  font-size: 1.5rem;
+  letter-spacing: 0.4rem;
+  text-align: right;
+  color: var(--mainBlue);
+  font-style: italic;
+  padding: 10px;
 }
-.banner-btn button a:hover {
+.about-info__sub {
+  font-size: 1rem;
+  letter-spacing: 0.4rem;
+  text-align: left;
+  color: var(--mainBlue);
+  margin-top: 20px;
+}
+.fa {
+  color: var(--mainBlue);
+  margin: 10px;
+  font-size: 25px;
+  padding: 10px;
+}
+.info-txt {
   color: var(--mainWhite);
 }
-/* END OF BANNER */
+.about-info__text {
+  line-height: 1.5rem;
+  font-size: 1.1rem;
+  margin: 2rem 0;
+  color: var(--mainWhite);
+  text-align: justify;
+  padding: 10px;
+}
+
+@media screen and (max-width: 576px) {
+  .about__center {
+    grid-template-columns: 1fr;
+  }
+  .about-img,
+  .about-info {
+    /* its is not going to grow/shrink */
+    flex: 0 0 calc(50% - 1rem);
+  }
+  .about-info {
+    display: flex;
+    align-items: flex-end;
+  }
+  .about-img__photo {
+    display: none;
+  }
+}
+/* END OF ABOUT SECTION *
 
 /* PARA-2 */
-#skills {
-  padding: 60px 0;
-  background-color: var(--mainGrey);
-}
-.skills-container {
-  max-width: 95vw;
-  /* places it in the center */
-  margin: 0 auto;
-}
-.skills-item {
-  text-align: center;
-  margin: 20px 0;
-}
-.skills-item .fa {
-  font-size: 60px;
-  color: var(--mainBlack);
-}
-.skills-item h1 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  margin: 30px 0;
-  color: var(--mainBlue);
-  text-transform: uppercase;
-}
 
-.skills-item p {
-  width: 90%;
+.section-title2,
+.section-title {
+  text-align: center;
+}
+.section-title__name {
+  font-size: 3rem;
+  letter-spacing: 0.5rem;
+  border: 4px solid var(--mainBlue);
+  color: var(--dark);
+  border-radius: 15px;
+  font-weight: 700;
+  font-style: oblique;
+  max-width: 50vw;
   margin: 0 auto;
+}
+/* end of section title */
+
+.hobbies-section {
+  background: var(--mainWhite);
+  padding: 3rem 0;
+}
+.hobbies__center {
+  max-width: 90vw;
+  margin: 2rem auto;
+}
+.hobbies__single-hobby {
+  margin: 2rem auto;
+  text-align: center;
+  transition: all 0.2s ease-in;
+  padding: 2rem 0;
+}
+.hobbies__single-hobby:hover {
+  background: var(--mainBlue);
+  border-radius: 3rem;
+  box-shadow: 0 10px 5px #191500;
   color: var(--mainWhite);
 }
+.hobbies__single-hobby-icon {
+  transition: all 0.5s ease-in;
+}
+.hobby-fnt {
+  font-size: 60px;
+}
+.services__single-hobby-icon:hover {
+  transform: translateY(-0.5rem);
+}
+.hobbies__single-hobby-title {
+  font-weight: 700;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  letter-spacing: 0.2rem;
+  color: var(--dark);
+}
 
-@media screen and (min-width: 576px) {
-  .skills-container {
-    display: grid;
-    /* divides in 2 */
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 1em;
+.hobbies__single-hobby-text {
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 1.5rem;
+  letter-spacing: 0.2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .hobbies__center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .hobbies__single-hobby {
+    /* its is not going to grow/shrink */
+    flex: 0 0 calc(50% - 0.5rem);
   }
 }
-/* @media screen and (min-width: 992px) {
-  .skills-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 5px;
+
+@media screen and (min-width: 992px) {
+  .hobbies__single-hobby {
+    /* its is not going to grow/shrink */
+    flex: 0 0 calc(33.333% - 0.3rem);
   }
-} */
+}
+
 /* END OF PARA-2 */
 
 /* FOOTER */
