--- a/website-asignment/styles/dashboard.css
+++ b/website-asignment/styles/dashboard.css
@@ -33,7 +33,7 @@ body {
   grid-template-areas:
     "sidebar header header"
     "sidebar para-1 para-1"
-    "sidebar para-2 para-2"
+    "sidebar para-1 para-1"
     "sidebar footer footer";
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
@@ -44,13 +44,15 @@ body {
 
 .para-1 {
   grid-area: para-1;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(./images/pexels-photo-4511372.jpeg) center/cover no-repeat fixed;
-  color: var(--lightGrey); */
-}
-.para-2 {
-  grid-area: para-2;
-  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(../images/background-banner.jpg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .sidebar {
   grid-area: sidebar;
@@ -259,102 +261,45 @@ a {
 }
 /* END OF SIDEBAR */
 
-/* BANNER/PARA-1 */
-#banner {
-  min-height: 80vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/background-banner.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/* PARA-1 */
+.content-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9rem;
+  min-width: 400px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 60px rgb(0, 0, 0, 60);
 }
-.banner-text {
-  font-size: 50px;
-  text-transform: uppercase;
+td {
+  border: 2px solid var(--lightGrey);
+  transition: 1s ease;
+}
+td:hover {
+  background-color: var(--mainBlue);
+}
+
+.content-table thead tr {
+  background-color: var(--mainBlue);
   color: var(--mainWhite);
-  font-style: italic;
-}
-.banner-underline {
-  width: 200px;
-  border: 3px solid var(--mainBlue);
-  /* places it in the center */
-  margin: 10px auto 10px auto;
+  text-align: left;
+  font-weight: bold;
 }
 
-.banner-btn {
-  display: flex;
-  justify-content: space-between;
-}
-.banner-btn button a {
-  padding: 15px;
-  text-transform: uppercase;
-  text-align: justify;
-  text-justify: inter-word;
-  font-size: 30px;
-  font-weight: 900;
-}
-.banner-btn button {
-  margin: 0 10px;
-  background: transparent;
-  border: 4px solid var(--mainBlue);
-}
-.banner-btn button a:hover {
-  color: var(--mainWhite);
-}
-/* END OF BANNER */
-
-/* PARA-2 */
-#skills {
-  padding: 60px 0;
-  background-color: var(--mainGrey);
-}
-.skills-container {
-  max-width: 95vw;
-  /* places it in the center */
-  margin: 0 auto;
-}
-.skills-item {
-  text-align: center;
-  margin: 20px 0;
-}
-.skills-item .fa {
-  font-size: 60px;
-  color: var(--mainBlack);
-}
-.skills-item h1 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  margin: 30px 0;
-  color: var(--mainBlue);
-  text-transform: uppercase;
+.content-table th,
+.content-table td {
+  padding: 12px 15px;
 }
 
-.skills-item p {
-  width: 90%;
-  margin: 0 auto;
+.content-table tbody tr {
   color: var(--mainWhite);
 }
 
-@media screen and (min-width: 576px) {
-  .skills-container {
-    display: grid;
-    /* divides in 2 */
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 1em;
-  }
+.content-table tbody tr:last-of-type {
+  border-bottom: 4px solid var(--mainBlue);
 }
-/* @media screen and (min-width: 992px) {
-  .skills-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 5px;
-  }
-} */
-/* END OF PARA-2 */
+
+/* END OF PARA-1 */
 
 /* FOOTER */
 .footer {
