--- a/website-asignment/styles/faq..css
+++ b/website-asignment/styles/faq..css
@@ -62,6 +62,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 110px;
 }
 /* END OF GRID */
 
@@ -350,7 +351,7 @@ a {
   transition: all 1s ease;
 }
 .fab {
-  font-size: 40px;
+  font-size: 35px;
 }
 .footer-single-icon:hover {
   color: var(--mainWhite);
