--- a/website-asignment/styles/dashboard.css
+++ b/website-asignment/styles/dashboard.css
@@ -319,7 +319,7 @@ td:hover {
 
 /* resposnsive */
 @media screen and (max-width: 576px) {
-  .content-table .border-head {
+  /* .content-table .border-head {
     display: none;
   }
   .content-table,
@@ -336,12 +336,22 @@ td:hover {
     text-align: right;
     padding-left: 50%;
     position: relative;
-  }
+  } */
   .para-1 {
-    height: 550vh;
+    height: 590vh;
   }
   .footer {
-    margin-top: 530vh;
+    margin-top: 583vh;
+  }
+  .border-head {
+    display: none;
+  }
+  td {
+    display: block;
+  }
+  .quartile {
+    background: var(--mainBlue);
+    text-align: center;
   }
 }
 /* END OF PARA-1 */
