--- a/website-asignment/styles/blog.css
+++ b/website-asignment/styles/blog.css
@@ -33,7 +33,7 @@ body {
   grid-template-areas:
     "sidebar header header"
     "sidebar para-1 para-1"
-    "sidebar para-2 para-2"
+    "sidebar para-1 para-1"
     "sidebar footer footer";
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
@@ -48,10 +48,7 @@ body {
     url(./images/pexels-photo-4511372.jpeg) center/cover no-repeat fixed;
   color: var(--lightGrey); */
 }
-.para-2 {
-  grid-area: para-2;
-  height: 100%;
-}
+
 .sidebar {
   grid-area: sidebar;
 }
@@ -233,6 +230,7 @@ a {
   color: var(--dark);
   transition: 0.4s;
 }
+
 .slidebar .close {
   position: absolute;
   top: -17px;
@@ -262,7 +260,7 @@ a {
 
 /* BANNER/PARA-1 */
 #banner {
-  min-height: 80vh;
+  height: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/background-banner.jpg);
   background-attachment: fixed;
@@ -270,8 +268,8 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 .banner-text {
   font-size: 50px;
@@ -285,77 +283,78 @@ a {
   /* places it in the center */
   margin: 10px auto 10px auto;
 }
-
-.banner-btn {
-  display: flex;
-  justify-content: space-between;
-}
-.banner-btn button a {
-  padding: 15px;
-  text-transform: uppercase;
-  text-align: justify;
-  text-justify: inter-word;
-  font-size: 30px;
-  font-weight: 900;
-}
-.banner-btn button {
-  margin: 0 10px;
-  background: transparent;
-  border: 4px solid var(--mainBlue);
-}
-.banner-btn button a:hover {
-  color: var(--mainWhite);
-}
 /* END OF BANNER */
 
-/* PARA-2 */
-#skills {
-  padding: 60px 0;
-  background-color: var(--mainGrey);
+/* BLOG */
+.blog-content {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1200px;
+  flex-wrap: wrap;
 }
-.skills-container {
-  max-width: 95vw;
-  /* places it in the center */
-  margin: 0 auto;
+.blog-content .card {
+  position: relative;
+  width: 300px;
+  padding: 20px;
+  margin: 20px;
+  background-color: var(--mainBlue);
 }
-.skills-item {
-  text-align: center;
-  margin: 20px 0;
+.blog-content .card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 20px solid transparent;
+  border-top: 20px solid var(--mainGrey);
+  border-right: 20px solid var(--mainGrey);
 }
-.skills-item .fa {
-  font-size: 60px;
-  color: var(--mainBlack);
+.blog-content .card .icon {
+  margin-bottom: 10px;
 }
-.skills-item h1 {
-  font-size: 30px;
-  letter-spacing: 2px;
-  margin: 30px 0;
-  color: var(--mainBlue);
-  text-transform: uppercase;
+.blog-content .card .content {
+  position: relative;
+  height: 215px;
+  overflow: hidden;
 }
-
-.skills-item p {
-  width: 90%;
-  margin: 0 auto;
+.blog-content .card .content h3 {
   color: var(--mainWhite);
+  font-size: 1.5rem;
+  margin-bottom: 15px;
 }
-
-@media screen and (min-width: 576px) {
-  .skills-container {
-    display: grid;
-    /* divides in 2 */
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 1em;
+.blog-content .card .content::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(transparent, var(--mainBlue));
+}
+.blog-content .card .read-more {
+  position: relative;
+  padding: 10px 15px;
+  background: var(--lightGrey);
+  margin-top: 15px;
+  display: inline-block;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 14px;
+}
+.blog-content .card .read-more::before {
+  content: "Read More";
+}
+@media screen and (max-width: 576px) {
+  .para-1 {
+    height: 400vh;
+  }
+  .footer {
+    margin-top: 400vh;
   }
 }
-/* @media screen and (min-width: 992px) {
-  .skills-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 5px;
-  }
-} */
-/* END OF PARA-2 */
+/* END OF BLOG */
 
 /* FOOTER */
 .footer {
