--- a/website-asignment/blog-posts/styles/experience.css
+++ b/website-asignment/blog-posts/styles/experience.css
@@ -12,6 +12,7 @@ body {
   font-family: "Fira Sans", sans-serif;
   /* The overflow-x property specifies whether to clip the content, add a scroll bar, or display overflow content of a block-level element, when it overflows at the left and right edges. */
   /* overflow-x: hidden; */
+  min-height: 100%;
 }
 
 /* these are variables  */
@@ -33,24 +34,24 @@ body {
   grid-template-areas:
     "sidebar header header"
     "sidebar para-1 para-1"
-    "sidebar para-1 para-1"
+    "sidebar para-2 para-2"
     "sidebar footer footer";
   grid-template-rows: auto 1fr 1fr auto;
   grid-template-columns: auto 1fr;
-  position: relative;
 }
-/* .item {
-  border: 2px solid orange;
-} */
 
 .para-1 {
   grid-area: para-1;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(../images/background-banner.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/programming.jpeg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.para-2 {
+  grid-area: para-2;
   height: 100%;
 }
 .sidebar {
@@ -58,7 +59,6 @@ body {
 }
 .footer {
   grid-area: footer;
-  width: 100%;
   height: 110px;
 }
 /* END OF GRID */
@@ -158,11 +158,11 @@ a {
   margin-right: 10px;
 }
 @media screen and (max-width: 576px) {
-  .nav-links {
-    height: auto;
-  }
   .index-header {
     position: initial;
+  }
+  .nav-links {
+    height: auto;
   }
   nav ul {
     display: flex;
@@ -207,12 +207,6 @@ a {
   }
 }
 
-/* @media screen and (max-width: 476px) {
-  nav ul li {
-    flex: 1 0 calc(50%);
-    margin: 5px 10px;
-  }
-} */
 /* END OF NAVBAR */
 
 /* SIDEBAR */
@@ -267,98 +261,55 @@ a {
 /* END OF SIDEBAR */
 
 /* PARA-1 */
-.table-container {
+.about {
+  min-height: 80vh;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: flex-end;
 }
-.nbsa {
-  color: var(--mainBlue);
-  display: block;
+.banner-text {
+  font-size: 70px;
+  text-transform: uppercase;
+  color: var(--mainWhite);
+  font-style: italic;
+}
+.banner-underline {
+  width: 700px;
+  border: 3px solid var(--mainBlue);
+  /* places it in the center */
+  margin: 10px auto 10px auto;
+}
+.about {
+  padding: 10px 60px;
+}
+.about__center {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 90vw;
+  margin: 2rem auto;
+}
+/* END OF PARA-1 *
+
+
+/* PARA-2 */
+.experience {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.experience-header {
   text-align: center;
-  margin: 10px;
+  padding: 20px;
+  font-size: 50px;
+  color: var(--mainBlue);
 }
-.nbsa h1 {
-  font-size: 35px;
-  padding: 10px 0;
+.experience-text {
+  width: 100%;
+  text-align: center;
+  padding: 40px 120px;
+  display: inline;
+  font-size: 25px;
 }
-.fa-link {
-  font-size: 35px;
-}
-.content-table {
-  border-collapse: collapse;
-  font-size: 0.9rem;
-  min-width: 400px;
-  border-radius: 5px 5px 0 0;
-  overflow: hidden;
-  box-shadow: 0 0 60px rgb(0, 0, 0, 60);
-}
-td {
-  border: 2px solid var(--lightGrey);
-  transition: 1s ease;
-}
-td:hover {
-  background-color: var(--mainBlue);
-}
-
-.content-table thead tr {
-  background-color: var(--mainBlue);
-  color: var(--mainWhite);
-  text-align: left;
-  font-weight: bold;
-}
-
-.content-table th,
-.content-table td {
-  padding: 12px 15px;
-}
-
-.content-table tbody tr {
-  color: var(--mainWhite);
-}
-
-.content-table tbody tr:last-of-type {
-  border-bottom: 4px solid var(--mainBlue);
-}
-
-/* resposnsive */
-@media screen and (max-width: 576px) {
-  /* .content-table .border-head {
-    display: none;
-  }
-  .content-table,
-  .content-table tbody,
-  .content-table tr,
-  .content-table td {
-    display: block;
-    width: 100%;
-  }
-  .content-table tr {
-    margin-bottom: 15px;
-  }
-  .content-table td {
-    text-align: right;
-    padding-left: 50%;
-    position: relative;
-  } */
-  .para-1 {
-    height: 590vh;
-  }
-  .footer {
-    margin-top: 583vh;
-  }
-  .border-head {
-    display: none;
-  }
-  td {
-    display: block;
-  }
-  .quartile {
-    background: var(--mainBlue);
-    text-align: center;
-  }
-}
-/* END OF PARA-1 */
+/* END OF PARA-2 */
 
 /* FOOTER */
 .footer {
