--- a/website-asignment/styles/faq..css
+++ b/website-asignment/styles/faq..css
@@ -40,9 +40,9 @@ body {
   grid-template-columns: auto 1fr;
   position: relative;
 }
-.item {
+/* .item {
   border: 2px solid orange;
-}
+} */
 
 .para-1 {
   grid-area: para-1;
@@ -118,6 +118,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: var(--dark);
+  height: 120px;
 }
 .active {
   border: 3px solid var(--mainWhite);
@@ -151,12 +152,12 @@ a {
 }
 
 .hz-logo {
-  height: 150px;
+  height: 110px;
   cursor: pointer;
   /* box-shadow: -15px -6px 13px -3px #191500; */
 }
 .profile-pic {
-  max-width: 110px;
+  max-width: 85px;
   margin-right: 10px;
 }
 @media screen and (max-width: 576px) {
@@ -171,6 +172,9 @@ a {
   li,
   a {
     font-size: 30px;
+  }
+  .nav-links {
+    height: auto;
   }
 
   .fa-home,
