--- a/website-asignment/blog-posts/styles/study-choice.css
+++ b/website-asignment/blog-posts/styles/study-choice.css
@@ -267,13 +267,13 @@ a {
   justify-content: flex-end;
 }
 .banner-text {
-  font-size: 50px;
+  font-size: 80px;
   text-transform: uppercase;
   color: var(--mainWhite);
   font-style: italic;
 }
 .banner-underline {
-  width: 200px;
+  width: 4 500px;
   border: 3px solid var(--mainBlue);
   /* places it in the center */
   margin: 10px auto 10px auto;
