--- a/website-asignment/styles/profle.css
+++ b/website-asignment/styles/profle.css
@@ -430,6 +430,7 @@ a {
   text-align: left;
   line-height: 1.5rem;
   letter-spacing: 0.2rem;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
