--- a/website-asignment/styles/dashboard.css
+++ b/website-asignment/styles/dashboard.css
@@ -17,8 +17,8 @@
 
 .para-1 {
   grid-area: para-1;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(../images/background-banner.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../images/starry3.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
