--- a/website-asignment/styles/faq..css
+++ b/website-asignment/styles/faq..css
@@ -17,8 +17,8 @@
 
 .para-1 {
   grid-area: para-1;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/background-banner.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../images/starry2.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
