--- a/website-asignment/styles/profle.css
+++ b/website-asignment/styles/profle.css
@@ -38,7 +38,7 @@
   /* margin-top: 150px; */
   min-height: 80vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/background-banner.jpg);
+    url(../images/starry2.jpg);
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
