fixed field of work

--- a/website-asignment/blog-posts/styles/main.css
+++ b/website-asignment/blog-posts/styles/main.css
@@ -17,7 +17,7 @@ body {
 
 /* these are variables  */
 :root {
-  --mainBlue: #2b98f0;
+  --mainBlue: #4ba0ea;
   --mainGrey: #575757;
   --lightGrey: #c9c9c9;
   --darkGrey: #959595;
