--- a/website-asignment/styles/index.css
+++ b/website-asignment/styles/index.css
@@ -36,7 +36,7 @@
 /* BANNER/PARA-1 */
 #banner {
   min-height: 90vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(../images/background-banner.jpg);
   background-attachment: fixed;
   background-position: center;
@@ -110,7 +110,7 @@
 .skills-item p {
   width: 90%;
   margin: 0 auto;
-  color: var(--mainWhite);
+  color: var(--dark);
 }
 
 @media screen and (min-width: 576px) {
