--- a/website-asignment/blog-posts/styles/field-of-work.css
+++ b/website-asignment/blog-posts/styles/field-of-work.css
@@ -78,6 +78,9 @@ h2 {
   font-size: 70px;
   margin: 50px 0;
   text-align: center;
+  border-bottom: 14px solid var(--darkGrey);
+  border-radius: 60%;
+  padding: 10px;
 }
 .fw-title {
   display: block;
