--- a/website-asignment/blog-posts/styles/swot-a.css
+++ b/website-asignment/blog-posts/styles/swot-a.css
@@ -117,7 +117,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.2rem;
-  color: var(--dark);
+  color: var(--mainYellow);
 }
 
 .hobbies__single-hobby-text {
@@ -126,6 +126,7 @@
   text-align: left;
   line-height: 1.5rem;
   letter-spacing: 0.2rem;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
