--- a/website-asignment/styles/profle.css
+++ b/website-asignment/styles/profle.css
@@ -67,7 +67,7 @@
   display: block;
   width: 80%;
   position: relative;
-  border-radius: 50%;
+  border-radius: 60%;
   /* box-shadow: -19px 11px 0px -2px var(--mainBlue); */
 }
 
@@ -189,7 +189,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.2rem;
-  color: var(--dark);
+  color: var(--mainYellow);
 }
 
 .hobbies__single-hobby-text {
