--- a/website-asignment/blog-posts/styles/first-fb.css
+++ b/website-asignment/blog-posts/styles/first-fb.css
@@ -66,21 +66,41 @@
 
 
 /* PARA-2 */
-.experience {
+.feedback-container {
   display: grid;
   grid-template-columns: 1fr;
 }
-.experience-header {
+.feedback-header {
+  display: block;
   text-align: center;
-  padding: 20px;
-  font-size: 50px;
-  color: var(--mainBlue);
+  font-size: 60px;
+  /* padding: 10px 0; */
+  color: var(--dark);
+  margin-top: 40px;
 }
-.experience-text {
-  width: 100%;
-  text-align: center;
-  padding: 40px 120px;
-  display: inline;
-  font-size: 25px;
+.fw-underline {
+  width: 400px;
+  border: 3px solid var(--mainBlue);
+  /* places it in the center */
+  margin: 5px auto 30px auto;
 }
+.feedback-text-item {
+  color: var(--mainWhite);
+  width: 80%;
+  background: var(--mainBlue);
+  border-radius: 7px;
+  padding: 15px;
+  margin: 20px 0px 20px 0px;
+}
+.positives,
+.negatives {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.feedback-pic {
+  width: 300px;
+  margin: 30px;
+}
+
 /* END OF PARA-2 */
