--- a/website-asignment/blog-posts/styles/study-choice.css
+++ b/website-asignment/blog-posts/styles/study-choice.css
@@ -83,7 +83,7 @@
 /* end of section title */
 
 .hobbies-section {
-  background: var(--mainWhite);
+  background: var(--mainGrey);
   padding: 3rem 0;
 }
 .hobbies__center {
@@ -116,6 +116,9 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.2rem;
+  color: var(--mainBlue);
+}
+.hobbies__single-hobby:hover .hobbies__single-hobby-title {
   color: var(--mainYellow);
 }
 
