--- a/website-asignment/blog-posts/styles/swot-a.css
+++ b/website-asignment/blog-posts/styles/swot-a.css
@@ -149,5 +149,14 @@
     flex: 0 0 calc(33.333% - 0.3rem);
   }
 }
+@media screen and (max-width: 576px) {
+  .banner-text {
+    font-size: 70px;
+    text-align: end;
+  }
+  .banner-underline {
+    width: 300px;
+  }
+}
 
 /* END OF PARA-2 */
